# CryptoBase

./: .editorconfig  .gitignore  BuildSpeedTest.ps1  CryptoBase.sln  CryptoBase.slnx  Directory.Build.props  Directory.Packages.props  LICENSE  README.md  common.props
.github/: renovate.json
.github/workflows/: CI.yml
CryptoBase/: AEADCryptoCreate.cs  AESUtils.cs  ChaCha20Utils.cs  CpuIdUtils.cs  CryptoBase.csproj  Extensions.cs  FastUtils.cs  GHashUtils.cs  HexExtensions.cs  IntrinsicsExtensions.cs  IntrinsicsUtils.cs  Poly1305Utils.cs  SM4Utils.cs  Salsa20Utils.cs  StreamCryptoCreate.cs  Utils.cs
CryptoBase.Abstractions/: CryptoBase.Abstractions.csproj  ICanReset.cs  IIntrinsics.cs  IMac.cs
CryptoBase.Abstractions/Digests/: HashConstants.cs  IHash.cs  MD5DigestBase.cs  SHA1DigestBase.cs  SM3DigestBase.cs
CryptoBase.Abstractions/SymmetricCryptos/: BlockCryptoBase.cs  ChaCha20CryptoBase.cs  ChachaCryptoBase.cs  IAEADCrypto.cs  IBlockCrypto.cs  IBlockCryptoMode.cs  ICanReset.cs  IMac.cs  IStreamBlockCryptoMode.cs  IStreamCrypto.cs  ISymmetricCrypto.cs  RC4CryptoBase.cs  Salsa20CryptoBase.cs  SnuffleCryptoBase.cs  StreamCryptoBase.cs
CryptoBase.Benchmark/: AESBenchmark.cs  Base32Benchmark.cs  CBCBenchmark.cs  CFBBenchmark.cs  CRC32Benchmark.cs  CTRBenchmark.cs  ChaCha20Benchmark.cs  ChaCha20OriginalBenchmark.cs  ChaCha20Poly1305Benchmark.cs  CryptoBase.Benchmark.csproj  GCMBenchmark.cs  GHashBenchmark.cs  HKDFBenchmark.cs  HMACBenchmark.cs  HexExtensionsBenchmark.cs  MD5Benchmark.cs  Poly1305Benchmark.cs  RC4Benchmark.cs  SHA1Benchmark.cs  SHA256Benchmark.cs  SHA384Benchmark.cs  SHA512Benchmark.cs  SM3Benchmark.cs  SM4Benchmark.cs  Salsa20Benchmark.cs  SodiumIncrementBenchmark.cs  XChaCha20Benchmark.cs  XChaCha20Poly1305Benchmark.cs  XSalsa20Benchmark.cs
CryptoBase.BouncyCastle/: Check.cs  CryptoBase.BouncyCastle.csproj  Extensions.cs  Pack.cs
CryptoBase.BouncyCastle/Digests/: BcDigest.cs  BcDigestsUtils.cs  BcMD5Digest.cs  BcSHA1Digest.cs  BcSHA256Digest.cs  (+3 more)
CryptoBase.Shared/: CryptoBase.Shared.csproj  Extensions.cs
CryptoBase.SpeedTest/: CryptoBase.SpeedTest.csproj  CryptoTest.cs  Program.cs
UnitTest/: AESCBCTest.cs  AESCFBTest.cs  AESCTRTest.cs  AESGCMTest.cs  AESTest.cs  Base32Test.cs  BenchmarkTest.cs  CRC32Test.cs  ChaCha20OriginalTest.cs  ChaCha20Poly1305Test.cs  ChaCha20Test.cs  ExtensionsTest.cs  GHashTest.cs  HexExtensionTest.cs  HkdfTest.cs  HmacTest.cs  MD5Test.cs  Poly1305Test.cs  RC4Test.cs  SHA1Test.cs  SHA256Test.cs  SHA384Test.cs  SHA512Test.cs  SM3Test.cs  SM4GCMTest.cs  SM4Test.cs  Salsa20Test.cs  TestUtils.cs  UnitTest.cs  UnitTest.csproj  XChaCha20Poly1305Test.cs  XChaCha20Test.cs  XSalsa20Test.cs
native/cryptobase/: Cargo.toml
native/cryptobase/.cargo/: config.toml
native/cryptobase/src/: digest_ffi.rs  digest_ring_ffi.rs  lib.rs  md5.rs  sha1.rs  sha1_ring.rs  sha224.rs  sha256.rs  sha256_ring.rs  sha384.rs  sha512.rs  sm3.rs
src/: .editorconfig  CryptoBase.sln  common.props
test/: .runsettings
(+492 files in other folders)
