[package]
name = "cryptobase"
version = "1.0.0"
edition = "2021"

[dependencies]
libc = "0.2"
digest = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true }
sm3 = { version = "0.4", optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }

[profile.release]
lto = true
strip = true

[lib]
name = "cryptobase_native"
crate-type = ["cdylib"]

[features]
default = ["hash"]
hash = ["digest", "md5", "sm3", "sha1", "sha224","sha256","sha384","sha512"]
md5 = ["md-5"]
sm3 = ["dep:sm3"]
sha1 = ["dep:sha1"]
sha224 = ["dep:sha2"]
sha256 = ["dep:sha2"]
sha384 = ["dep:sha2"]
sha512 = ["dep:sha2"]
